[gd_scene load_steps=10 format=3 uid="uid://cyqqnf421iwau"]

[ext_resource type="Script" path="res://src/game/game.gd" id="1_f34oq"]
[ext_resource type="PackedScene" uid="uid://dtj47wchb5fff" path="res://src/game/board/board.tscn" id="1_ovxdd"]
[ext_resource type="PackedScene" uid="uid://bvw28natcakmd" path="res://src/game/paddle/paddle.tscn" id="2_5oiq8"]
[ext_resource type="PackedScene" uid="uid://cfv6ag3gwdu3l" path="res://src/game/controllers/human_player.tscn" id="3_ecijc"]
[ext_resource type="PackedScene" uid="uid://du5348dvgbdcy" path="res://src/game/ball/ball.tscn" id="4_qqabx"]
[ext_resource type="Script" path="res://src/game/controllers/tracker_ai.gd" id="6_4oywm"]
[ext_resource type="PackedScene" uid="uid://b1rswy0gvchw7" path="res://src/game/ui/ui.tscn" id="7_mlxy0"]
[ext_resource type="PackedScene" uid="uid://bu720qjhsg3fd" path="res://src/game/ui/pause_menu.tscn" id="8_8xcv7"]
[ext_resource type="AudioStream" uid="uid://b472gxtr6bh80" path="res://src/game/zapThreeToneUp.ogg" id="9_qyqju"]

[node name="Game" type="Node2D"]
script = ExtResource("1_f34oq")

[node name="Score" parent="." instance=ExtResource("7_mlxy0")]

[node name="Board" parent="." instance=ExtResource("1_ovxdd")]

[node name="Paddles" type="Node2D" parent="."]

[node name="Left" parent="Paddles" instance=ExtResource("2_5oiq8")]
position = Vector2(70, 590)

[node name="Right" parent="Paddles" instance=ExtResource("2_5oiq8")]
position = Vector2(1850, 590)

[node name="Controllers" type="Node2D" parent="."]

[node name="LeftHumanPlayer" parent="Controllers" node_paths=PackedStringArray("paddle") instance=ExtResource("3_ecijc")]
up_input = &"left_up"
down_input = &"left_down"
paddle = NodePath("../../Paddles/Left")

[node name="RightHumanPlayer" parent="Controllers" node_paths=PackedStringArray("paddle") instance=ExtResource("3_ecijc")]
up_input = &"right_up"
down_input = &"right_down"
paddle = NodePath("../../Paddles/Right")

[node name="TrackerAI" type="Node2D" parent="Controllers" node_paths=PackedStringArray("paddle", "ball")]
script = ExtResource("6_4oywm")
paddle = NodePath("../../Paddles/Right")
ball = NodePath("../../Ball")

[node name="Ball" parent="." instance=ExtResource("4_qqabx")]
position = Vector2(950, 590)

[node name="PauseMenu" parent="." instance=ExtResource("8_8xcv7")]
process_mode = 3
visible = false

[node name="Sounds" type="Node" parent="."]

[node name="Score" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("9_qyqju")

[connection signal="goal_scored" from="Board" to="." method="_on_goal_scored"]
[connection signal="on_segment_hit" from="Board" to="." method="_on_board_scenary_hit"]
[connection signal="on_wall_hit" from="Board" to="." method="_on_board_scenary_hit"]
[connection signal="paddle_hit" from="Paddles/Left" to="." method="_on_paddle_hit"]
[connection signal="paddle_hit" from="Paddles/Right" to="." method="_on_paddle_hit"]
[connection signal="paused" from="PauseMenu" to="." method="_on_paused"]
[connection signal="unpaused" from="PauseMenu" to="." method="_on_unpaused"]
